--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "source": "src/index.js",
   "scripts": {
     "build": "microbundle",
+    "postversion": "npm publish .",
+    "prepublish": "yarn run build",
     "dev": "microbundle watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
@@ -13,7 +15,9 @@
   },
   "author": "Wes",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "styled-normalize": "^8.0.0"
+  },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.8",
     "@storybook/addon-links": "^3.4.8",
